--- a/PySerial.bib
+++ b/PySerial.bib
@@ -2,3 +2,9 @@
   title={Hack Database Website Menggunakan Python dan Sqlmap Pada Windows},
   author={Nurjanah, Tanti Siti and Insanudin, Entik}
 }
+@book{utami2004logika,
+  title={Logika Algoritma dan implementasinya dalam bahasa python di GNU/Linux},
+  author={Utami, Ema and Raharjo, Suwanto},
+  year={2004},
+  publisher={Penerbit Andi}
+}
